# telegram-support-bot

./: .dockerignore  Dockerfile  LICENSE  README.md  config.ini  pyproject.toml  script.sh  telegram_webhook.py
languages/: en.json  gu.json  kn.json  or.json  te.json
src/: data_models.py  main.py
src/core/: config.py  logger.py
src/languages/: bn.json  en.json  gu.json  hi.json  kn.json  ml.json  mr.json  or.json  pa.json  ta.json  te.json
src/memory/: redis.py
src/utils/: language_util.py
